--- a/11-02.md
+++ b/11-02.md
@@ -22,27 +22,18 @@
 
 ---
 
-### Задание 1
+### Задание 1. Приведите примеры проблем, которые может решить кеширование
 
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
+Ответ:
+- Повышение производительности достигается за счет
+складывания в кэш данных, к которым чаще всего происходит
+обращение
+- Увеличение скорости ответа
+- Экономия ресурсов базы данных, например, применяя
+кэширование тяжелых запросов
+- Сглаживание бустов трафика. Например, во время черной
+пятницы онлайн-магазины используют кэш, чтобы переживать
+резкое увеличение трафика
 
 
 ---
