--- a/11-02.md
+++ b/11-02.md
@@ -38,16 +38,10 @@
 
 ---
 
-### Задание 2
+### Задание 2. Установите и запустите memcached.
 
-`Приведите ответ в свободной форме........`
+![image](https://user-images.githubusercontent.com/121248099/227737678-0484fe76-e002-4c32-be3f-10d725fc7fce.png)
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
 
 ```
 Поле для вставки кода...
