--- a/11-02.md
+++ b/11-02.md
@@ -43,41 +43,13 @@
 ![image](https://user-images.githubusercontent.com/121248099/227737678-0484fe76-e002-4c32-be3f-10d725fc7fce.png)
 
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
-
-
 ---
 
-### Задание 3
+### Задание 3. Запишите в memcached несколько ключей с любыми именами и значениями, для которых выставлен TTL 5
 
-`Приведите ответ в свободной форме........`
+![image](https://user-images.githubusercontent.com/121248099/227739355-ca97880c-c9b8-42c5-8c4b-8e6ba15679d8.png)
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
 
 ### Задание 4
 
