--- a/11-02.md
+++ b/11-02.md
@@ -51,7 +51,7 @@
 
 
 
-### Задание 4
+### Задание 4. Запишите в Redis несколько ключей с любыми именами и значениями
 
 ![image](https://user-images.githubusercontent.com/121248099/227739803-cc413313-bd90-454f-a7ab-7c9e3cc2fe5a.png)
 
