--- a/11-01.md
+++ b/11-01.md
@@ -48,10 +48,10 @@
 
 
 Ответ:
-1.1 Oracle, Microsoft SQL, PostgreSQL, MySQL
-1.2 MySQL или PostgreSQL?
-1.3 MongoDB
-1.4 Графовые СУБД
+1.1 СУБД должна гарантировать целостность и четкую структуру данных. Реляционные базы данных, или базы данных SQL Основная особенность — надежность и неизменяемость данных, низкий риск потери информации. При обновлении данных их целостность гарантирована, они заменяются в одной таблице. Подойдут Oracle, Microsoft SQL, PostgreSQL, MySQL.
+1.2 СУБД должны быть гибкими и быстрыми. MySQL Данная СУБД работает с реляционными данными и имеет свободное программное обеспечение , СУБД заслужено считается одной из самых гибких и быстродействующих, поэтому ее предлагают использовать для проектов малых и средних объемов
+1.3 MongoDB. СУБД должна иметь простую и понятную структуру. MongoDB рассчитана на работу с данными иерархической структуры. По сути, это хранилище документов без использования схематичного или табличного форматов, поэтому ее еще называют документоориентированной. 
+1.4 Графовые СУБД. СУБД должна уметь быстро работать со связями. Графовые СУБД, предназначенные для хранения информации, связанной с графами (узлы, вершины, связи между узлами).
 
 ---
 
