--- a/11-01.md
+++ b/11-01.md
@@ -60,7 +60,7 @@
 
 
 Ответ:
-Верификация пользователя - введение номера (сверка существования номера) - введение суммы пополнения - внесение денежных средств - сверка суммы и внесенных средств - потверждение транзации (транзакция проведена)
+Начать транзакцию - введение номера (сверка существования номера) - проверка/подтверждение сотового оператора - проверка баланса - введение суммы пополнения - внесение денежных средств - сверка суммы и внесенных средств - потверждение транзации (транзакция проведена)
 
 ---
 
