--- a/12-01.md
+++ b/12-01.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "`Базы данных`" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -22,27 +22,25 @@
 
 ---
 
-### Задание 1
+### Задание 1. Опишите не менее семи таблиц, из которых состоит база данных:
+- какие данные хранятся в этих таблицах;
+- какой тип данных у столбцов в этих таблицах, если данные хранятся в PostgreSQL.
 
-`Приведите ответ в свободной форме........`
+Ответ:
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+1 ФИО - фамилия, имя и отчетсво - строковый (varchar)
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+2 ОКЛАД - зп сотрудника - числовой (decimal/numeric)
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
+3 должность - должность сотрудника - строковый (varchar)
+
+4 Тип подразделения - подразделение, в котором работает сотрудник - строковый (varchar)
+
+5 Дата - дата приема на работу - дата и время (tinyint)
+
+6 Адрес - местонахождение филиала - строковый (varchar)
+
+7 Проэкт - проект сотрудника - строковый (varchar)
 
 
 ---
