--- a/12-01.md
+++ b/12-01.md
@@ -30,9 +30,9 @@
 
 1 ФИО - фамилия, имя и отчетсво - строковый (varchar)
 
-2 ОКЛАД - зп сотрудника - числовой (decimal/numeric)
+2 Оклад - зп сотрудника - числовой (decimal/numeric)
 
-3 должность - должность сотрудника - строковый (varchar)
+3 Должность - должность сотрудника - строковый (varchar)
 
 4 Тип подразделения - подразделение, в котором работает сотрудник - строковый (varchar)
 
