--- a/12-01.md
+++ b/12-01.md
@@ -43,92 +43,40 @@
 7 Проэкт - проект сотрудника - строковый (varchar)
 
 
----
 
-### Задание 2
+Приведите решение к следующему виду:
 
-`Приведите ответ в свободной форме........`
+Сотрудники (
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+идентификатор, первичный ключ, serial,
+фамилия varchar(50),
+...
+идентификатор структурного подразделения, внешний ключ, integer).
 
 
----
+Ответ:
 
-### Задание 3
+Сотрудники (
+идентификатор, первичный ключ, serial
+фамилия varchar(50)
+имя varchar(50)
+отчество varchar(50)
+оклада numeric
+должность varchar(50)
+тип подразделения varchar(50)
+дата приема date
+проект varchar(50))
 
-`Приведите ответ в свободной форме........`
+Адрес (
+идентификатор, внешний ключ, integer
+город varchar(50)
+улица varchar(50)
+номер дома smallint)
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+Должность (
+идентификатор, внешний ключ, integer
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+Дата (
+идентификатор, внешний ключ, date
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
 
-### Задание 4
-
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
-
----
-## Дополнительные задания (со звездочкой*)
-
-Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
-
-### Задание 5
-
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
