--- a/12-01.md
+++ b/12-01.md
@@ -74,8 +74,8 @@
 
 дата приема date
 
-проект varchar(50))
-
+проект varchar(50)
+)
 
 
 
@@ -88,18 +88,18 @@
 улица varchar(50)
 
 номер дома smallint)
-
+)
 
 
 
 
 Должность (
 идентификатор, внешний ключ, integer
-
+)
 
 
 
 Дата (
 идентификатор, внешний ключ, date
-
+)
 
