--- a/12-01.md
+++ b/12-01.md
@@ -29,15 +29,10 @@
 
 Ответ:
 
-1 ФИО - фамилия, имя и отчетсво - строковый (varchar)
-2 Оклад - зп сотрудника - числовой (decimal/numeric)
-3 Должность - должность сотрудника - строковый (varchar)
-4 Тип подразделения - подразделение, в котором работает сотрудник - строковый (varchar)
-5 Дата - дата приема на работу - дата и время (tinyint)
-6 Адрес - местонахождение филиала - строковый (varchar)
-7 Проэкт - проект сотрудника - строковый (varchar)
+![image](https://user-images.githubusercontent.com/121248099/227788693-d3755b20-692e-485d-b24b-6a93f0d43666.png)
 
 
+---------------------------------------------------------------------------------------------------------------
 
 Приведите решение к следующему виду:
 
