--- a/12-01.md
+++ b/12-01.md
@@ -66,9 +66,10 @@
 дата приема date
 
 проект varchar(50)
+
 )
 
--
+---
 
 
 Адрес (
@@ -79,20 +80,23 @@
 
 улица varchar(50)
 
-номер дома smallint)
+номер дома smallint
+
 )
 
--
+---
 
 
 Должность (
 идентификатор, внешний ключ, integer
+
 )
 
--
+---
 
 
 Дата (
 идентификатор, внешний ключ, date
+
 )
 
