--- a/12-01.md
+++ b/12-01.md
@@ -34,14 +34,14 @@
 
 ---------------------------------------------------------------------------------------------------------------
 
-Приведите решение к следующему виду:
+**Приведите решение к следующему виду:**
 
-Сотрудники (
+**Сотрудники (**
 
-идентификатор, первичный ключ, serial,
-фамилия varchar(50),
-...
-идентификатор структурного подразделения, внешний ключ, integer).
+**идентификатор, первичный ключ, serial,**
+**фамилия varchar(50),**
+**...**
+**идентификатор структурного подразделения, внешний ключ, integer).**
 
 -----------------------------------------------------------------------------------------------------------
 
