--- a/12-01.md
+++ b/12-01.md
@@ -23,11 +23,11 @@
 ---
 
 ### Задание 1. Опишите не менее семи таблиц, из которых состоит база данных:
-- какие данные хранятся в этих таблицах;
-- какой тип данных у столбцов в этих таблицах, если данные хранятся в PostgreSQL.
+**- какие данные хранятся в этих таблицах;
+**- какой тип данных у столбцов в этих таблицах, если данные хранятся в PostgreSQL.
 
 
-Ответ:
+##Ответ:
 
 ![image](https://user-images.githubusercontent.com/121248099/227788693-d3755b20-692e-485d-b24b-6a93f0d43666.png)
 
@@ -39,13 +39,16 @@
 **Сотрудники (**
 
 **идентификатор, первичный ключ, serial,**
+
 **фамилия varchar(50),**
+
 **...**
+
 **идентификатор структурного подразделения, внешний ключ, integer).**
 
 -----------------------------------------------------------------------------------------------------------
 
-Ответ:
+##Ответ:
 
 Сотрудники (
 
