--- a/12-01.md
+++ b/12-01.md
@@ -27,7 +27,7 @@
 **- какой тип данных у столбцов в этих таблицах, если данные хранятся в PostgreSQL.**
 
 
-Ответ:
+### Ответ:
 
 ![image](https://user-images.githubusercontent.com/121248099/227788693-d3755b20-692e-485d-b24b-6a93f0d43666.png)
 
@@ -48,13 +48,13 @@
 
 -----------------------------------------------------------------------------------------------------------
 
-Ответ:
+### Ответ:
 
-Сотрудники (
+* Сотрудники (
 
-идентификатор, первичный ключ, serial
+ * идентификатор, первичный ключ, serial
 
-фамилия varchar(50)
+ * фамилия varchar(50)
 
 имя varchar(50)
 
