--- a/12-01.md
+++ b/12-01.md
@@ -56,50 +56,46 @@
 
     * фамилия varchar(50)
 
-имя varchar(50)
+    * имя varchar(50)
 
-отчество varchar(50)
+    * отчество varchar(50)
 
-оклада numeric
+    * оклада numeric
 
-должность varchar(50)
+    * должность varchar(50)
 
-тип подразделения varchar(50)
+    * тип подразделения varchar(50)
 
-дата приема date
+    * дата приема date
 
-проект varchar(50)
-
-)
-
----
-
-
-Адрес (
-
-идентификатор, внешний ключ, integer
-
-город varchar(50)
-
-улица varchar(50)
-
-номер дома smallint
+    * проект varchar(50)
 
 )
 
----
 
+* Адрес (
 
-Должность (
-идентификатор, внешний ключ, integer
+    * идентификатор, внешний ключ, integer
+
+    * город varchar(50)
+
+    * улица varchar(50)
+
+    * номер дома smallint
 
 )
 
----
 
 
-Дата (
-идентификатор, внешний ключ, date
+* Должность (
+    * идентификатор, внешний ключ, integer
+
+)
+
+
+
+* Дата (
+    * идентификатор, внешний ключ, date
 
 )
 
