--- a/12-01.md
+++ b/12-01.md
@@ -50,7 +50,7 @@
 
 ### Ответ:
 
-* Сотрудники (
+* *Сотрудники (
 
     * идентификатор, первичный ключ, serial
 
@@ -73,7 +73,7 @@
 )
 
 
-* Адрес (
+* *Адрес (
 
     * идентификатор, внешний ключ, integer
 
@@ -87,14 +87,14 @@
 
 
 
-* Должность (
+* *Должность (
     * идентификатор, внешний ключ, integer
 
 )
 
 
 
-* Дата (
+* *Дата (
     * идентификатор, внешний ключ, date
 
 )
