--- a/12-01.md
+++ b/12-01.md
@@ -100,3 +100,21 @@
 
 )
 
+
+* *Оклад* (
+    * идентификатор, внешний ключ, integer
+    * сумма numeric
+
+)
+
+* *Подразделение* (
+    * идентификатор, внешний ключ, integer
+    * тип структурного подразделения varchar(50)
+    * тип департамента varchar(50)
+    * тип структурного подразделения varchar(50)
+
+)
+
+* *Проект* (
+    * идентификатор, внешний ключ, integer
+    * название проекта varchar(50)
