--- a/12-02.md
+++ b/12-02.md
@@ -22,27 +22,9 @@
 
 ---
 
-### Задание 1
+### Задание 1. Выполните запрос на получение списка пользователей в базе данных. (скриншот)
 
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
+![image](https://user-images.githubusercontent.com/121248099/227799737-a774b02d-afd7-4ccf-810a-351e50cc9975.png)
 
 
 ---
