--- a/12-02.md
+++ b/12-02.md
@@ -22,9 +22,25 @@
 
 ---
 
-### Задание 1. Выполните запрос на получение списка пользователей в базе данных. (скриншот)
+### Задание 1. 
 
+1.1. Поднимите чистый инстанс MySQL версии 8.0+. Можно использовать локальный сервер или контейнер Docker.
+
+1.2. Создайте учётную запись sys_temp.
+
+1.3. Выполните запрос на получение списка пользователей в базе данных. (скриншот)
+
+Ответ:
 ![image](https://user-images.githubusercontent.com/121248099/227799737-a774b02d-afd7-4ccf-810a-351e50cc9975.png)
+----
+
+1.4. Дайте все права для пользователя sys_temp.
+
+1.5. Выполните запрос на получение списка прав для пользователя sys_temp. (скриншот)
+
+Ответ:
+![image](https://user-images.githubusercontent.com/121248099/227800072-b523b047-21e5-4b70-aed0-fa8fff6da660.png)
+----
 
 
 ---
