--- a/12-02.md
+++ b/12-02.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "`Работа с данными (DDL/DML)`" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -43,6 +43,30 @@
 
 ![image](https://user-images.githubusercontent.com/121248099/227800072-b523b047-21e5-4b70-aed0-fa8fff6da660.png)
 ----
+
+1.6. Переподключитесь к базе данных от имени sys_temp.
+
+Для смены типа аутентификации с sha2 используйте запрос:
+
+ALTER USER 'sys_test'@'localhost' IDENTIFIED WITH mysql_native_password BY 'password';
+1.6. По ссылке https://downloads.mysql.com/docs/sakila-db.zip скачайте дамп базы данных.
+
+1.7. Восстановите дамп в базу данных.
+
+1.8. При работе в IDE сформируйте ER-диаграмму получившейся базы данных. При работе в командной строке используйте команду для получения всех таблиц базы данных. (скриншот)
+
+Ответ:
+
+![image](https://user-images.githubusercontent.com/121248099/227804761-da45c8d4-b362-48db-aa10-5a434d49809e.png)
+
+![image](https://user-images.githubusercontent.com/121248099/227804772-97aa82e6-a88d-48d7-bfb3-7e63558a1ccb.png)
+
+![image](https://user-images.githubusercontent.com/121248099/227804704-303fd395-33a8-4683-ac6b-8b1c93c3f1b7.png)
+
+![image](https://user-images.githubusercontent.com/121248099/227804722-2461cf7a-da82-42d1-a973-65b4a16fd63a.png)
+
+
+
 
 
 ---
