--- a/12-3.md
+++ b/12-3.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "SQL. Часть 1" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -22,7 +22,8 @@
 
 ---
 
-### Задание 1 Получите уникальные названия районов из таблицы с адресами, которые начинаются на “K” и заканчиваются на “a” и не содержат пробелов.
+### Задание 1 
+Получите уникальные названия районов из таблицы с адресами, которые начинаются на “K” и заканчиваются на “a” и не содержат пробелов.
 
 ![image](https://user-images.githubusercontent.com/121248099/236798255-dd685662-8389-4d2e-9b86-27338194d6c0.png)
 
