--- a/12-3.md
+++ b/12-3.md
@@ -25,6 +25,16 @@
 ### Задание 1 
 Получите уникальные названия районов из таблицы с адресами, которые начинаются на “K” и заканчиваются на “a” и не содержат пробелов.
 
+``` SQL
+SELECT
+	district
+FROM
+	address a
+WHERE
+	district LIKE 'K%a'
+	AND district NOT LIKE '% %';
+```
+
 ![image](https://user-images.githubusercontent.com/121248099/236798255-dd685662-8389-4d2e-9b86-27338194d6c0.png)
 
 
