--- a/12-3.md
+++ b/12-3.md
@@ -58,26 +58,21 @@ WHERE
 ---
 
 ### Задание 3
+Получите последние пять аренд фильмов.
 
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
+``` SQL
+SELECT 
+	rental_date
+FROM 
+	rental r
+ORDER BY
+	rental_date DESC
+LIMIT 5;
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+![image](https://user-images.githubusercontent.com/121248099/236810526-f9e09fd2-7ab5-45a2-a2e2-d5575eb1f47d.png)
+
+---
 
 ### Задание 4
 
