--- a/12-3.md
+++ b/12-3.md
@@ -83,14 +83,16 @@ LIMIT 5;
 замените буквы 'll' в именах на 'pp'.
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT
+	LOWER(last_name),
+	lower(REPLACE(first_name, 'LL', 'pp'))
+FROM
+	customer c
+WHERE
+	first_name = 'Kelly'
+	OR first_name = 'Willie';
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+![image](https://user-images.githubusercontent.com/121248099/236819503-0c2b3106-2250-4bd5-825e-696fed7ba83d.png)
 
 ---
