--- a/12-3.md
+++ b/12-3.md
@@ -90,7 +90,8 @@ FROM
 	customer c
 WHERE
 	first_name = 'Kelly'
-	OR first_name = 'Willie';
+	OR first_name = 'Willie'
+	AND active = 1;
 ```
 
 ![image](https://user-images.githubusercontent.com/121248099/236819503-0c2b3106-2250-4bd5-825e-696fed7ba83d.png)
