--- a/12-4.md
+++ b/12-4.md
@@ -31,16 +31,26 @@
 
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT
+	CONCAT(s.first_name, ' ', s.last_name) AS worker,
+	COUNT(c.store_id),
+	c2.city
+FROM
+	customer c
+JOIN staff s ON
+	s.store_id = c.store_id
+JOIN address a ON
+	a.address_id = s.address_id
+JOIN city c2 ON
+	c2.city_id = a.city_id
+GROUP BY
+	CONCAT(s.first_name, ' ', s.last_name),
+	c2.city
+HAVING
+	COUNT(c.store_id) > 300
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
-
+![image](https://user-images.githubusercontent.com/121248099/236885956-07ddd993-6a78-4519-91af-05a398851bed.png)
 
 ---
 
