--- a/12-4.md
+++ b/12-4.md
@@ -59,15 +59,12 @@ HAVING
 
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT COUNT(f.`length`) film_id 
+FROM film f 
+WHERE `length` > (SELECT AVG(`length`) FROM film)
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+![image](https://user-images.githubusercontent.com/121248099/236893677-2e1cbfa5-8e73-4e59-b7a7-3befb2b684e7.png)
 
 
 ---
