--- a/12-4.md
+++ b/12-4.md
@@ -74,13 +74,13 @@ WHERE `length` > (SELECT AVG(`length`) FROM film)
 
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT DATE_FORMAT(p.payment_date, '%M,%Y') AS "Месяц/год", COUNT(p.payment_id), SUM(p.amount) 
+FROM payment p
+GROUP BY DATE_FORMAT(p.payment_date, '%M,%Y')
+ORDER BY
+	SUM(p.amount) DESC
+LIMIT 1
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+![image](https://user-images.githubusercontent.com/121248099/236897701-62c8bb3e-b0d6-4283-baca-146fd6ac1d12.png)
 
