--- a/12-3.md
+++ b/12-3.md
@@ -26,7 +26,7 @@
 Получите уникальные названия районов из таблицы с адресами, которые начинаются на “K” и заканчиваются на “a” и не содержат пробелов.
 
 ``` SQL
-SELECT
+SELECT DISTINCT
 	district
 FROM
 	address a
@@ -35,7 +35,8 @@ WHERE
 	AND district NOT LIKE '% %';
 ```
 
-![image](https://user-images.githubusercontent.com/121248099/236798255-dd685662-8389-4d2e-9b86-27338194d6c0.png)
+![image](https://user-images.githubusercontent.com/121248099/236898257-cdc448b0-1d1e-465b-91bf-a1546cf69e02.png)
+
 
 
 ---
