--- a/12-5.md
+++ b/12-5.md
@@ -26,15 +26,13 @@
 Напишите запрос к учебной базе данных, который вернёт процентное отношение общего размера всех индексов к общему размеру всех таблиц.
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT
+	concat(count(INDEX_LENGTH) / sum(DATA_LENGTH) * 100, '%')
+FROM
+	information_schema.tables;
 ```
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
+![image](https://github.com/vapolushkina/homework/assets/121248099/4c6de2bc-685d-4c62-94e4-44959774e345)
 
 
 ---
@@ -49,16 +47,30 @@ where date(p.payment_date) = '2005-07-30' and p.payment_date = r.rental_date and
 оптимизируйте запрос: внесите корректировки по использованию операторов, при необходимости добавьте индексы.
 
 ``` SQL
-Поле для вставки кода...
-....
-....
-....
-....
+SELECT
+	DISTINCT concat(c.last_name, ' ', c.first_name),
+	sum(p.amount) 
+#  over (partition by c.customer_id, f.title)
+FROM
+	payment p,
+	rental r,
+	customer c
+#	inventory i
+#	film f
+WHERE
+	date(p.payment_date) = '2005-07-30'
+	AND p.payment_date = r.rental_date
+	AND r.customer_id = c.customer_id
+#	AND i.inventory_id = r.inventory_id
+GROUP BY concat(c.last_name, ' ', c.first_name)
 ```
+Первоначальное время запроса:
+![image](https://github.com/vapolushkina/homework/assets/121248099/31b84957-70c6-478b-8d01-ac7d3e1c2135)
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+После оптимизации:
+![image](https://github.com/vapolushkina/homework/assets/121248099/4b0e18f2-058f-44ea-858e-f365dabc9339)
 
+Все что оптимизировано отмечено #
 
 ---
 
