--- a/11-4.md
+++ b/11-4.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "`Очереди RabbitMQ`" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -23,114 +23,76 @@
 ---
 
 ### Задание 1
+Установка RabbitMQ
+Используя Vagrant или VirtualBox, создайте виртуальную машину и установите RabbitMQ. Добавьте management plug-in и зайдите в веб-интерфейс.
 
-`Приведите ответ в свободной форме........`
+Итогом выполнения домашнего задания будет приложенный скриншот веб-интерфейса RabbitMQ.
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
-
+![image](https://github.com/vapolushkina/homework/assets/121248099/4a9e3ef8-de16-4cf4-a56b-d4811edd62ec)
 
 ---
 
 ### Задание 2
+Отправка и получение сообщений
+Используя приложенные скрипты, проведите тестовую отправку и получение сообщения. Для отправки сообщений необходимо запустить скрипт producer.py.
 
-`Приведите ответ в свободной форме........`
+Для работы скриптов вам необходимо установить Python версии 3 и библиотеку Pika. Также в скриптах нужно указать IP-адрес машины, на которой запущен RabbitMQ, заменив localhost на нужный IP.
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+$ pip install pika
+Зайдите в веб-интерфейс, найдите очередь под названием hello и сделайте скриншот. После чего запустите второй скрипт consumer.py и сделайте скриншот результата выполнения скрипта
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+В качестве решения домашнего задания приложите оба скриншота, сделанных на этапе выполнения.
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+Для закрепления материала можете попробовать модифицировать скрипты, чтобы поменять название очереди и отправляемое сообщение.
+
+![image](https://github.com/vapolushkina/homework/assets/121248099/4229b6db-41cf-4089-9627-78ae36395d8f)
+
+![image](https://github.com/vapolushkina/homework/assets/121248099/f0bac071-8a00-4ca2-b27c-d974b6595f91)
+
+![image](https://github.com/vapolushkina/homework/assets/121248099/f9df08dc-f53b-4e07-98a7-e4b4015aa015)
+
+![image](https://github.com/vapolushkina/homework/assets/121248099/e36a2109-6cb9-4a57-8940-7e4513af89e0)
 
 
 ---
 
 ### Задание 3
+Подготовка HA кластера
+Используя Vagrant или VirtualBox, создайте вторую виртуальную машину и установите RabbitMQ. Добавьте в файл hosts название и IP-адрес каждой машины, чтобы машины могли видеть друг друга по имени.
 
-`Приведите ответ в свободной форме........`
+Пример содержимого hosts файла:
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+$ cat /etc/hosts
+192.168.0.10 rmq01
+192.168.0.11 rmq02
+После этого ваши машины могут пинговаться по имени.
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+Затем объедините две машины в кластер и создайте политику ha-all на все очереди.
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+В качестве решения домашнего задания приложите скриншоты из веб-интерфейса с информацией о доступных нодах в кластере и включённой политикой.
 
-### Задание 4
+Также приложите вывод команды с двух нод:
 
-`Приведите ответ в свободной форме........`
+$ rabbitmqctl cluster_status
+Для закрепления материала снова запустите скрипт producer.py и приложите скриншот выполнения команды на каждой из нод:
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+$ rabbitmqadmin get queue='hello'
+После чего попробуйте отключить одну из нод, желательно ту, к которой подключались из скрипта, затем поправьте параметры подключения в скрипте consumer.py на вторую ноду и запустите его.
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+Приложите скриншот результата работы второго скрипта.
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+![image](https://github.com/vapolushkina/homework/assets/121248099/83f80782-d8d3-4f2f-98c4-268e31c45eaa)
 
----
-## Дополнительные задания (со звездочкой*)
+![image](https://github.com/vapolushkina/homework/assets/121248099/bc0565a0-d41f-4b1b-870a-1744eb34305e)
 
-Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
+![image](https://github.com/vapolushkina/homework/assets/121248099/f9a7ce7a-e6b2-4564-8ab6-c55a4884f113)
 
-### Задание 5
+![image](https://github.com/vapolushkina/homework/assets/121248099/8ec95e8e-97c0-4dab-98dd-7dd7b09a11d6)
 
-`Приведите ответ в свободной форме........`
+![image](https://github.com/vapolushkina/homework/assets/121248099/6dffed35-51f1-4d65-9ea0-36555efba114)
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+![image](https://github.com/vapolushkina/homework/assets/121248099/3db7a441-316d-4725-a369-b621c58cb082)
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
+![image](https://github.com/vapolushkina/homework/assets/121248099/c481f3ca-6045-40c7-afbb-b0b341d04bc4)
+
+![image](https://github.com/vapolushkina/homework/assets/121248099/12dc7990-3b81-4673-8265-1f21d32b1647)
