--- a/12-6.md
+++ b/12-6.md
@@ -25,6 +25,8 @@
 ### Задание 1
 На лекции рассматривались режимы репликации master-slave, master-master, опишите их различия.
 
+Ответ:
+
 Master-Slave
 Плюсы:
 Надежность, за счет полного дублирования с MASTER.
@@ -50,6 +52,8 @@ Master-Master
 Выполните конфигурацию master-slave репликации, примером можно пользоваться из лекции.
 
 Приложите скриншоты конфигурации, выполнения работы: состояния и режимы работы серверов.
+
+Ответ:
 
 ![image](https://github.com/vapolushkina/homework/assets/121248099/a8c2fcd4-877c-48c3-8b9f-212b21c77aec)
 
