--- a/12-7.md
+++ b/12-7.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "`Репликация и масштабирование. Часть 2`" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -23,6 +23,13 @@
 ---
 
 ### Задание 1
+Опишите основные преимущества использования масштабирования методами:
+
+активный master-сервер и пассивный репликационный slave-сервер;
+master-сервер и несколько slave-серверов;
+активный сервер со специальным механизмом репликации — distributed replicated block device (DRBD);
+SAN-кластер.
+Дайте ответ в свободной форме.
 
 `Приведите ответ в свободной форме........`
 
@@ -48,6 +55,14 @@
 ---
 
 ### Задание 2
+Разработайте план для выполнения горизонтального и вертикального шаринга базы данных. База данных состоит из трёх таблиц:
+
+пользователи,
+книги,
+магазины (столбцы произвольно).
+Опишите принципы построения системы и их разграничение или разбивку между базами данных.
+
+Пришлите блоксхему, где и что будет располагаться. Опишите, в каких режимах будут работать сервера.
 
 `Приведите ответ в свободной форме........`
 
@@ -71,66 +86,3 @@
 
 
 ---
-
-### Задание 3
-
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
-
-### Задание 4
-
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
-
----
-## Дополнительные задания (со звездочкой*)
-
-Эти задания дополнительные (не обязательные к выполнению) и никак не повлияют на получение вами зачета по этому домашнему заданию. Вы можете их выполнить, если хотите глубже и/или шире разобраться в материале.
-
-### Задание 5
-
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота](ссылка на скриншот)`
