--- a/12-7.md
+++ b/12-7.md
@@ -31,26 +31,12 @@ master-сервер и несколько slave-серверов;
 SAN-кластер.
 Дайте ответ в свободной форме.
 
-`Приведите ответ в свободной форме........`
-
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
-
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
-
+Ответ:
+Master-Master - гибкость, за счет изоляции каждого экземпляра БД, а сценарии гибридной репликации возможны с несколькими наборами мастеров.
+Master-Slave - уменьшает нагрузку на Master.
+Master-Slave-Slave - уменьшает нагрузку и увеличивает скорость чтения информации, пропорционально колличеству Slave-серверов.
+Master-DRBD - увеличение отказоустойчивости.
+SAN-кластер - быстродействие и масштабируемость, центральное управление и резервирование данных без загрузки локальной сети и серверов.
 
 ---
 
