Update and rename README.md to 12-8.md

--- a/12-8.md
+++ b/12-8.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию "`Название занятия`" - `Фамилия и имя студента`
+# Домашнее задание к занятию "`Резервное копирование баз данных`" - `Полушкина Виктория`
 
 
 ### Инструкция по выполнению домашнего задания
@@ -23,27 +23,21 @@
 ---
 
 ### Задание 1
+Резервное копирование
+Кейс
+Финансовая компания решила увеличить надёжность работы баз данных и их резервного копирования.
 
-`Приведите ответ в свободной форме........`
+Необходимо описать, какие варианты резервного копирования подходят в случаях:
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+1.1. Необходимо восстанавливать данные в полном объёме за предыдущий день.
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
+1.2. Необходимо восстанавливать данные за час до предполагаемой поломки.
 
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 1](ссылка на скриншот 1)`
+Ответ:
 
+1.1. - Diff Backup - позволяет быстрее восстановить данные по сравнению с Inc Backup, т.к. требуется только Full и последний Diff. Данное резервное копирование быстрее, чем полное, но медленнее, чем инкрементное.
+
+1.2. - Inc Backup - использует полную копию, как начальную точку. Затем выполняется резервное копирование только блоков данных, которые были изменены с момента последнего резервной копи, с заданным периодом выполнения задания. В зависимости от политики хранения резервных копии, через определенный период создается новая полная копия для повторения цикла. Инкрементное резервное копирование можно выполнять так часто, как требуется, так как сохраняются только копии последних изменений.
 
 ---
 
