--- a/12-8.md
+++ b/12-8.md
@@ -42,26 +42,16 @@
 ---
 
 ### Задание 2
+PostgreSQL
+2.1. С помощью официальной документации приведите пример команды резервирования данных и восстановления БД (pgdump/pgrestore).
 
-`Приведите ответ в свободной форме........`
+Ответ:
 
-1. `Заполните здесь этапы выполнения, если требуется ....`
-2. `Заполните здесь этапы выполнения, если требуется ....`
-3. `Заполните здесь этапы выполнения, если требуется ....`
-4. `Заполните здесь этапы выполнения, если требуется ....`
-5. `Заполните здесь этапы выполнения, если требуется ....`
-6. 
+Дамп БД выполняется командой: pg_dump -Fc mydb > db.dump
 
-```
-Поле для вставки кода...
-....
-....
-....
-....
-```
-
-`При необходимости прикрепитe сюда скриншоты
-![Название скриншота 2](ссылка на скриншот 2)`
+Для восстановления используется:
+$ dropdb mydb
+$ pg_restore -C -d postgres db.dump
 
 
 ---
