--- a/12-8.md
+++ b/12-8.md
@@ -35,7 +35,7 @@
 
 Ответ:
 
-1.1. - Diff Backup - позволяет быстрее восстановить данные по сравнению с Inc Backup, т.к. требуется только Full и последний Diff. Данное резервное копирование быстрее, чем полное, но медленнее, чем инкрементное.
+1.1. - Diff Backup - позволяет быстрее восстановить данные по сравнению с Inc Backup, т.к. требуется только Full и последний Diff. Данное резервное копирование быстрее (скорость создания бэкапа), чем полное, но медленнее, чем инкрементное. Скорость восстановления будет выше, чем inc.
 
 1.2. - Inc Backup - использует полную копию, как начальную точку. Затем выполняется резервное копирование только блоков данных, которые были изменены с момента последнего резервной копи, с заданным периодом выполнения задания. В зависимости от политики хранения резервных копии, через определенный период создается новая полная копия для повторения цикла. Инкрементное резервное копирование можно выполнять так часто, как требуется, так как сохраняются только копии последних изменений.
 
